--- a/QtCreator/mainWindow.ui
+++ b/QtCreator/mainWindow.ui
@@ -99,6 +99,9 @@
        </item>
        <item>
         <widget class="QLabel" name="label">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Classifier Two</string>
          </property>
@@ -106,6 +109,9 @@
        </item>
        <item>
         <widget class="QLineEdit" name="txt_alg2">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -116,6 +122,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="btn_alg2">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Select Classifier...</string>
          </property>
