--- a/QtCreator/datasetWindow.ui
+++ b/QtCreator/datasetWindow.ui
@@ -39,7 +39,7 @@
          <item>
           <widget class="QLineEdit" name="txt_train_set">
            <property name="readOnly">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="clearButtonEnabled">
             <bool>false</bool>
@@ -70,7 +70,7 @@
          <item>
           <widget class="QLineEdit" name="txt_test_set">
            <property name="readOnly">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -98,7 +98,7 @@
          <item>
           <widget class="QLineEdit" name="txt_labels">
            <property name="readOnly">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
           </widget>
          </item>
