--- a/QtCreator/datasetWindow.ui
+++ b/QtCreator/datasetWindow.ui
@@ -65,6 +65,9 @@
            <property name="text">
             <string>K-Fold Cross-Validation</string>
            </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -75,7 +78,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_5">
+          <widget class="QLabel" name="lbl_folds">
            <property name="text">
             <string>K-Folds</string>
            </property>
@@ -99,7 +102,10 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_2">
+          <widget class="QLabel" name="lbl_testing">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>Testing Set</string>
            </property>
@@ -107,6 +113,9 @@
          </item>
          <item>
           <widget class="QLineEdit" name="txt_test_set">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="readOnly">
             <bool>true</bool>
            </property>
@@ -114,6 +123,9 @@
          </item>
          <item>
           <widget class="QPushButton" name="btn_test_set">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>Select Testing Set...</string>
            </property>
@@ -559,7 +571,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>228</x>
-     <y>194</y>
+     <y>290</y>
     </hint>
     <hint type="destinationlabel">
      <x>433</x>
@@ -575,7 +587,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>201</x>
-     <y>283</y>
+     <y>379</y>
     </hint>
     <hint type="destinationlabel">
      <x>148</x>
@@ -711,6 +723,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>chk_folds</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>Dialog</receiver>
+   <slot>chk_folds_toggled()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>44</x>
+     <y>139</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>3</x>
+     <y>147</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>btn_train_set_clicked()</slot>
@@ -720,5 +748,6 @@
   <slot>move_label()</slot>
   <slot>on_selection_changed()</slot>
   <slot>on_accept()</slot>
+  <slot>chk_folds_toggled()</slot>
  </slots>
 </ui>
